--- a/Data_Cleaning_and_Validation.ipynb
+++ b/Data_Cleaning_and_Validation.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os"
+    "import pandas as pd"
    ]
   },
   {
