--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -7,9 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
